Fixing font sizes on small screens 2

--- a/themes/rendcokids/src/sass/site/devotionals.scss
+++ b/themes/rendcokids/src/sass/site/devotionals.scss
@@ -18,6 +18,7 @@ body.devotionals {
       margin: 0;
       @media (max-width: 600px) {
         font-size: 60px;
+        word-break: break-word;
       }
     }
   }
